# DM-Instamap

./: .env.example  .env.local.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP_CODEX_ASSET_TAXONOMY.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/worker/: package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/worker/src/dm_instamap_worker/: __init__.py  health.py  jobs.py  main.py  models.py  security.py
apps/worker/src/dm_instamap_worker/routes/: __init__.py  ai.py  assets.py  dependencies.py  exports.py  images.py  jobs.py  references.py
apps/worker/tests/: test_health.py  test_jobs.py  test_security.py
data/indexes/: asset-audit.json  asset-embeddings.json  (+4 more)
docs/: AI_BRIDGE.md  ASSET_PIPELINE.md  ASSET_SCANNER.md  ASSET_STORAGE.md  ASSET_TAG_IMPORT.md  ASSET_TAXONOMY.md  CAMPAIGNS.md  CODE_QUALITY.md  DATA_MODEL.md  DD2VTT_IMPORT.md  DEPENDENCIES.md  EDITOR.md  EXPORTS.md  FOUNDRY_EXPORT.md  GENERATOR.md  IMAGE_GENERATION.md  LEGACY_ROADMAP.md  LOCAL_DATA.md  PACK_IMPORTER.md  PATH_SECURITY.md  PERFORMANCE.md  PROJECTS.md  REFERENCE_STYLE_DNA.md  RENDERING.md  ROADMAP.md  ROADMAP_9_5.md  ROADMAP_OLD.md  ROADMAP_POST_E.md  SNAPSHOTS.md  TESTING.md  VTT_EXPORT.md  WINDOWS_SETUP.md  WORKER.md  architecture.md
scripts/: audit-file-size.mjs  audit-ui-language.mjs  audit-versioned-assets.mjs  doctor.ts  fix-core-snapshot-imports.mjs
(+219 files in other folders)
