[project]
name = "dm-instamap-worker"
version = "0.1.0"
description = "Local FastAPI worker for DM-Instamap asset processing."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn[standard]>=0.38.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# La lunghezza riga e gia imposta da `ruff format`; E501 colpirebbe solo
# stringhe non spezzabili (messaggi, URL).
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# I test impostano variabili d'ambiente e sys.path prima di importare l'app:
# gli import non-in-cima sono intenzionali.
"tests/**" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# Depends/Query/... nei default degli argomenti sono l'idioma standard di FastAPI.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Header",
  "fastapi.Cookie",
  "fastapi.File",
  "fastapi.Form",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
